use media queries to support browser sizes, fixed text on smaller browsers, added popups for users on iPhone and Android devices

--- a/app/assets/stylesheets/bootstrap.css.less
+++ b/app/assets/stylesheets/bootstrap.css.less
@@ -4,6 +4,50 @@ body { padding-top: 60px; }
 
 @import "twitter/bootstrap/responsive";
 
+@media (max-width: 480px) {
+    .iphone {
+        display: none;
+        margin-left: auto;
+        margin: 0 auto;
+    }
+
+    .marketing h1 {
+        line-height: 60px;
+    }
+
+    .span8 {
+        width: auto%;
+    }
+}
+
+@media (max-width: 768px) {
+    #news {
+        display: none;
+    }
+
+    .span4 {
+        width: 100%;
+    }
+
+    .span6 {
+        width: 100%;
+    }
+
+    .span8 {
+        width: 100%;
+    }
+
+    .iphone {
+        display: none;
+        margin-left: auto;
+        margin: 0 auto;
+    }
+
+    .marketing h1 {
+        line-height: 60px;
+    }
+}
+
 // Set the correct sprite paths
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
 //@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
